<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >

    <RelativeLayout
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/appColorGreen">

        <LinearLayout
            android:id="@+id/back_arrow_button"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:background="@drawable/ic_arrow_back_black_24dp"
                android:backgroundTint="@color/white" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/edit_details"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/productImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:scaleType="fitXY"
                android:layout_gravity="center"
                android:background="@drawable/rectangle_background"
                />

               <ImageView
                   android:layout_width="35dp"
                   android:layout_height="25dp"
                   android:layout_gravity="center"
                   android:src="@drawable/camera"
                   android:layout_marginTop="10dp"
                   />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_view"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/individualFramerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/edittext_box"
                        android:gravity="center"
                        android:orientation="horizontal">


                        <EditText
                            android:id="@+id/product_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:background="@android:color/transparent"
                            android:gravity="start"
                            android:hint="@string/title"
                            android:inputType="textCapWords"
                            android:padding="12dp"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textColorHint="@color/light_gray"
                            android:textCursorDrawable="@drawable/cursor_color"
                            android:textSize="@dimen/text_size_15sp" />

                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/edittext_box"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/emailIndividualEdt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:background="@android:color/transparent"
                            android:gravity="start"
                            android:hint="@string/product_price"
                            android:inputType="textEmailAddress"
                            android:padding="12dp"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textColorHint="@color/light_gray"
                            android:textCursorDrawable="@drawable/cursor_color"
                            android:textSize="@dimen/text_size_15sp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/edittext_box"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/prod_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:background="@android:color/transparent"
                            android:gravity="start"
                            android:hint="@string/prod_des"
                            android:inputType="text"
                            android:padding="12dp"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textColorHint="@color/light_gray"
                            android:textCursorDrawable="@drawable/cursor_color"
                            android:textSize="@dimen/text_size_15sp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/edittext_box"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/prod_cat"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:background="@android:color/transparent"
                            android:gravity="start"
                            android:hint="@string/prod_cat"
                            android:inputType="text"
                            android:padding="12dp"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textColorHint="@color/light_gray"
                            android:textCursorDrawable="@drawable/cursor_color"
                            android:textSize="@dimen/text_size_15sp" />

                    </RelativeLayout>


                </LinearLayout>



                <TextView
                    android:id="@+id/updateProfileTxtBtn"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/button_border"
                    android:gravity="center"
                    android:text="@string/update_detail"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>